src/objects/Loan_Condition_Checklist__c.object
<CustomObject>
    <description>Object holds the individual Loan Conditions that apply to any given Application.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Box indicates that the Loan Condition is Active. Default value is Checked.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Loan Conditions</relationshipLabel>
        <relationshipName>Loan_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generated_Type__c</fullName>
        <formula>TEXT( Master_Checklist__r.Generated_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generated Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Condition_Code__c</fullName>
        <formula>TEXT(Master_Checklist__r.Checklist_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Condition Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Condition_Description__c</fullName>
        <formula>Master_Checklist__r.Checklist_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Condition Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Condition_Type__c</fullName>
        <formula>TEXT(Master_Checklist__r.Related_To__c)</formula>
        <label>Loan Condition Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fields associates the Loan Conditions and the Loan record.</description>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Loan Conditions</relationshipLabel>
        <relationshipName>Loan_Condition_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Checklist__c</fullName>
        <label>Loan Condition</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Checklist__c.Checklist_Type__c</field>
                <operation>equals</operation>
                <value>Loan Condition</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Checklist__c</referenceTo>
        <relationshipLabel>Loan Conditions</relationshipLabel>
        <relationshipName>Loan_Condition_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Loan Conditions</relationshipLabel>
        <relationshipName>Loan_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan Condition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Manual_Loan_Conditions</fullName>
        <active>false</active>
        <description>Validation rule ensures the Loan Condition is NOT changed if the Loan Condition is Automatic. If the loan condition is Manual, THEN the Loan Condition Type can be edited.</description>
        <errorConditionFormula>Generated_Type__c = &quot;Auto&quot; &amp;&amp;  ISCHANGED(Master_Checklist__c )</errorConditionFormula>
        <errorDisplayField>Master_Checklist__c</errorDisplayField>
        <errorMessage>You cannot edit Loan Conditions that have been assigned automatically to the Application</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Manual_Loan_Conditions_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Generated_Type__c = &apos;Manual&apos;,  Active__c = false)</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>A manually created Loan Condition must be marked as Active on creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Property_Loan_Condition</fullName>
        <active>true</active>
        <description>Rule ensure that Loan Condition that are Type = Property have a Property associated to it.</description>
        <errorConditionFormula>Loan_Condition_Type__c = &quot;Property&quot; &amp;&amp;  ISBLANK(Property__c )</errorConditionFormula>
        <errorDisplayField>Property__c</errorDisplayField>
        <errorMessage>For Property Loan Conditions, you must have a Property associated to the record</errorMessage>
    </validationRules>
</CustomObject>